minor description change

--- a/dev/about.html
+++ b/dev/about.html
@@ -64,7 +64,7 @@
         <div class="col-md-6">
           <img class="img-circle" src="./images/asado.jpg" alt="Generic placeholder image" width="140" height="140">
           <h2>Asado Salsa</h2>
-          <p>Our special roasted salsa with a smooth tomato flavor with a touch of heat.</p>
+          <p>Our special roasted salsa with a smooth tomato flavor and a touch of heat.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-md-6 -->
       </div><!-- /.row -->
